recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: '(' expected but '{' found.
  if {
     ^Koch:23: error: illegal start of simple expression
} 
^